# Humanoid_Elevator_integration

./: .gitignore  LICENSE  README.md
docs/: architecture.md  recruiter_submission_summary.md  simulation_debug_report.md
media/: README.md
scripts/: build.sh  launch_sim.sh  open_gui.sh  stop_sim.sh
src/humanoid_delivery_interfaces/: CMakeLists.txt  package.xml
src/humanoid_delivery_interfaces/action/: DeliverItem.action  PickObject.action  RetryMission.action
src/humanoid_delivery_interfaces/msg/: HumanDetection.msg  LiftStatus.msg  RobotState.msg  Task.msg
src/humanoid_delivery_interfaces/srv/: CallLift.srv  ChargingRequest.srv  DoorOpenVerification.srv  MissionAssignment.srv  RecoveryReset.srv
src/humanoid_delivery_sim/: package.xml  setup.cfg  setup.py
src/humanoid_delivery_sim/config/: nav2_params.yaml  room_poses.yaml
src/humanoid_delivery_sim/humanoid_delivery_sim/: fleet_orchestrator.py  g1_gait_controller.py  joint_motion_demo.py  manipulation_server.py  motion_recorder.py  navigation_server.py  qos.py  robot_executive.py  safety_controller.py  sim_perception.py  speech_llm_interface.py  static_map_publisher.py
src/humanoid_delivery_sim/launch/: core_nodes.launch.py  humanoid_delivery_sim.launch.py  two_robot_lift_demo.launch.py
src/humanoid_delivery_sim/meshes/unitree_g1/: Dex1_base_link.STL  Dex1_finger_link_1.STL  Dex1_finger_link_2.STL  L_hand_base_link.STL  Link11_L.STL  Link11_R.STL  Link12_L.STL  Link12_R.STL  Link13_L.STL  Link13_R.STL  Link14_L.STL  Link14_R.STL  Link15_L.STL  Link15_R.STL  Link16_L.STL  Link16_R.STL  Link17_L.STL  Link17_R.STL  Link18_L.STL  Link18_R.STL  Link19_L.STL  Link19_R.STL  Link20_L.STL  Link20_R.STL  Link21_L.STL  Link21_R.STL  Link22_L.STL  Link22_R.STL  R_hand_base_link.STL  d455_link.STL  dex1_col_1.stl  dex1_col_2.stl  head_link.STL  head_servo_link.STL  left_ankle_pitch_link.STL  left_ankle_roll_link.STL  left_base_link.STL  left_elbow_link.STL  left_hand_index_0_link.STL  left_hand_index_1_link.STL  (+123 more)
src/humanoid_delivery_sim/urdf/: unitree_g1_23dof_delivery.urdf.xacro
src/humanoid_delivery_sim/worlds/: hotel_healthcare.world
