<?xml version="1.0"?>
<package format="3">
  <name>humanoid_delivery_sim</name>
  <version>0.1.0</version>
  <description>Gazebo and ROS2 simulation for a humanoid delivery robot in hotel and healthcare environments.</description>
  <maintainer email="candidate@example.com">Candidate</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>humanoid_delivery_interfaces</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
